[project]
name = "langgraph-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.1",
    "langsmith>=0.8.16",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
]
